examples/test/conf/TLSRoute/ProxyProtocol/Service_test-tcp-pp2.yaml
# Backend service for PP2-aware TCP echo server
apiVersion: v1
kind: Service
metadata:
  name: test-tcp-pp2
  namespace: edgion-test
spec:
  ports:
    - port: 30012
      targetPort: 30012
      protocol: TCP
